--- a/react-tools/index.html
+++ b/react-tools/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>React First</title>
+		<title>React Tools</title>
 		<link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" />
 	</head>
 	<body>
@@ -10,8 +10,8 @@
 
 		<script src="http://fb.me/react-0.11.1.js"></script>
 		<script src="http://fb.me/JSXTransformer-0.11.1.js"></script>
-		<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-		<script type="text/jsx" src="app.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.js"></script>
+		<script type="text/jsx" src="build/app.js"></script>
 	</body>
 </html>
 
